--- a/Lesson_2/Calculator/mortgage_calc_messages.yml
+++ b/Lesson_2/Calculator/mortgage_calc_messages.yml
@@ -1,8 +1,8 @@
 greeting: "Welcome to Mortgage Calculator! <<"
 loan_amount: "What is the mortgage amount?"
 positive_number: "Please enter a positive whole number."
-apr: "What is the Annual Percentage Rate?"
-non_negative: "Please enter a non-negative number or add a leading zero to the decimal."
+apr: "What is the Annual Percentage Rate? (Example: Enter 2.5 for 2.5%)"
+non_negative: "Please enter a non-negative number and/or add a leading zero to the decimal."
 loan_duration: "What is the mortgage period (years)?"
 another_calc: "Calculate another mortgage? (Y/N)"
 invalid_answer: "Invalid answer. Please put yes or no (Y/N)."
