--- a/Lesson_2/Calculator/mortgage_calc_messages.yml
+++ b/Lesson_2/Calculator/mortgage_calc_messages.yml
@@ -1,8 +1,9 @@
 greeting: "Welcome to Mortgage Calculator! <<"
 loan_amount: "What is the mortgage amount?"
-positive_number: "Please enter a positive whole number."
+positive_decimal: "Please enter a positive number."
 apr: "What is the Annual Percentage Rate? (Example: Enter 2.5 for 2.5%)"
-non_negative: "Please enter a non-negative number and/or add a leading zero to the decimal."
+non_negative: "Please enter a non-negative number. Add a leading zero if entering a decimal."
+positive_number: "Please enter a positive whole number."
 loan_duration: "What is the mortgage period (years)?"
 another_calc: "Calculate another mortgage? (Y/N)"
 invalid_answer: "Invalid answer. Please put yes or no (Y/N)."
